samples/kube-znn-istio/test-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-znn-1
spec:
  hosts:
  - kube-znn
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    fault:
      abort:
        percentage:
          value: 100.0
        httpStatus: 500
    route:
    - destination:
        host: kube-znn
        subset: v1
  - route:
    - destination:
        host: kube-znn
        subset: v1
